jeykyll 플러그인 추가

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to Heeveloper Blog</h1>
-        <small>Records my learning path</small>
+        <h1>Recent Posts</h1>
+        <small></small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
